# geyser_grpc

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml  test-wallet.json  test-wallet2.json
logs/: geyser_grpc.log.2025-05-06
proto/: geyser.proto
src/: main.rs
