[package]
name = "geyser_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features = ["transport", "tls-roots", "tls"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "2.2"
solana-client = "2.2"
solana-transaction-status = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.11" 