[package]
name = "geyser_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
solana-sdk = "1.17"
solana-client = "1.17"
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.10", features = ["tls", "tls-roots", "prost"] }
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
thiserror = "1.0"
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
tonic-build = "0.10" 